# ComfyUI-HYWM2

./: .gitignore  LICENSE  README.md  __init__.py  comfy-env-root.toml  comfy-test.toml  index.html  prestartup_script.py  pyproject.toml  requirements.txt
assets/: README.md
assets/generated_memorybank_traj_5/: cameras.json  meta.json
dev/: index.html
dev/linux-cpu/: index.html  models.json  results.json
dev/linux-cpu/logs/: depth_normal_resources.csv
dev/linux-gpu/: index.html  models.json  results.json
dev/linux-gpu/logs/: recon_resources.csv
dev/macos-cpu/: index.html  models.json  results.json
dev/macos-cpu/logs/: depth_normal_resources.csv
dev/macos-desktop/: index.html  results.json
dev/macos-desktop/electron_inspect/: final.html  initial.html  targets.json
dev/windows-cpu/: index.html  models.json  results.json
dev/windows-desktop/: index.html  results.json
dev/windows-gpu/: index.html  models.json  results.json
dev/windows-portable-cpu/: index.html  models.json  results.json
dev/windows-portable-gpu/: index.html  models.json  results.json
nodes/: __init__.py  comfy-env.toml  comfy_utils.py  decode_export.py  load_memory_bank.py  load_model.py  load_scene.py  ply_viewer.py  preview_and_filter_views.py  reconstruct.py  sample_panorama.py  splat_viewer.py  train_gaussians.py
scripts/: convert_to_bf16.py
web/js/: preview_views.js
web/ply_advanced_gaussian/: extension.js  viewer.html
web/splat_advanced/: extension.js  viewer.html
workflows/: depth_normal.json  recon.json  recon_memorybank.json  training.json
(+34 files in other folders)
