[project]
name = "comfyui-hywm2"
description = "ComfyUI wrapper for HY-World 2.0 / WorldMirror 2.0: 3D reconstruction (depth, normals, point clouds, 3DGS) from multi-view images."
version = "0.0.7"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-HYWM2"

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "HYWM2"
Icon = ""
