[project]
name = "comfyui-hywm2"
description = "Warning, uses experimental package `comfy-env` to attempt a one click isolated install. Will download and use pixi package manager. ComfyUI wrapper for HY-World 2.0 / WorldMirror 2.0: 3D reconstruction (depth, normals, point clouds, 3DGS) from multi-view images."
version = "0.0.13"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-HYWM2"

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "HYWM2"
Icon = "https://raw.githubusercontent.com/PozzettiAndrea/ComfyUI-HYWM2/main/assets/icon.png"
